--- a/install-ready/v92/common/common.cfg
+++ b/install-ready/v92/common/common.cfg
@@ -25,8 +25,8 @@ con_notifytime 4 // Notification Time when Developer Mode is Enabled
 // CrouchJump combo
 ////////////////////////////////////////
 
-alias +jumpcrouch "+jump; wait 5; duckON"
-alias -jumpcrouch "wait 5; duckOFF; -jump"
+alias +jumpcrouch "+jump; duckON"
+alias -jumpcrouch "duckOFF; -jump"
 alias duckON "+duck"
 alias duckOFF "-duck" 
 
@@ -162,7 +162,7 @@ vgui_message_dialog_modal 1
 
 lookspring 0 // toggles automatic view centering when 'mlook' is deactivated - * 1 is 'on', 0 is 'off'
 lookstrafe 0 // toggles mouse strafing when 'mlook' is active - * 1 is 'on', 0 is 'off'
-cl_software_cursor 1 // Switches the game to use a larger software cursor instead of the normal OS cursor
+cl_software_cursor 0 // Switches the game to use a larger software cursor instead of the normal OS cursor
 cl_mouselook 1
 cl_idealpitchscale 0.8
 m_pitch 0.022
