--- a/install-ready/_gmod.cfg
+++ b/install-ready/_gmod.cfg
@@ -3,11 +3,11 @@
 // GMod
 
 // Constants
-exec v92/common/common.cfg
-exec v92/common/keyboard.cfg
-exec v92/common/gamepad.cfg
+// exec v92/common/common.cfg
+// exec v92/common/keyboard.cfg
+// exec v92/common/gamepad.cfg
 exec v92/common/skill.cfg
-exec v92/common/multiplayer.cfg
+// exec v92/common/multiplayer.cfg
 
 // GMod
 exec v92/gmod/common.cfg
