--- a/install-ready/_obsidian.cfg
+++ b/install-ready/_obsidian.cfg
@@ -19,5 +19,5 @@ exec v92/obsidian/constants.cfg
 exec v92/obsidian/keyboard.cfg
 exec v92/obsidian/gamepad.cfg
 exec v92/obsidian/skill.cfg
-exec v92/obsidian/angel_good.cfg
-exec v92/obsidian/angel_bad.cfg
+// exec v92/obsidian/angel_good.cfg
+// exec v92/obsidian/angel_bad.cfg
