--- a/install-ready/v92/common/multiplayer.cfg
+++ b/install-ready/v92/common/multiplayer.cfg
@@ -22,7 +22,7 @@ cam_snapto 0
 // Server Settings
 ////////////////////////////////////////
 
-hostname "The Irish Roses" // Server Name (Multiplayer)
+hostname "We're All Mad Here" // Server Name (Multiplayer)
 maxplayers 2 // Max Players (Multiplayer)
 rcon_password scalpel // Set RCon Password
 // password // Echos the current server access password
@@ -32,9 +32,9 @@ sv_password nioj // Server password for entry into multiplayer games
 // Local Network
 ////////////////////////////////////////
 
-sv_lan 0
-net_start
-heartbeat
+// sv_lan 0
+// net_start
+// heartbeat
 
 ////////////////////////////////////////
 // Server Preferences
