--- a/install-ready/v92/gmod/keyboard.cfg
+++ b/install-ready/v92/gmod/keyboard.cfg
@@ -83,5 +83,6 @@ bind f12 addon_manager
 // Add-Ons
 ////////////////////////////////////////
 
+bind j +gb-radial
 bind / drop
 bind k +tfa_vox_callout_radial
