--- a/install-ready/v92/gmod/multiplayer.cfg
+++ b/install-ready/v92/gmod/multiplayer.cfg
@@ -122,7 +122,7 @@ sv_maxupdaterate 92 // Maximum updates per second that the server will allow (ti
 cl_playerspraydisable 0 // Disable player sprays.
 cl_allowupload 1 // Client uploads customization files
 cl_allowdownload 1 // Client downloads customization files
-cl_disablehtmlmotd 1 // Disable HTML MotDs
+// cl_disablehtmlmotd 1 // Disable HTML MotDs
 sv_allowcslua 1 // Allow Client-Side Lua
 
 ////////////////////////////////////////
