--- a/install-ready/v92/gmod/trainbuild.cfg
+++ b/install-ready/v92/gmod/trainbuild.cfg
@@ -5,7 +5,8 @@
 ////////////////////////////////////////
 
 bind [ "say .refreshtext"
-bind ] "say @freezeall"
+// bind ] "say @freezeall"
+bind ] "say !freezeall"
 bind ' "say @gold train"
 bind uparrow "say .mark forward"
 bind downarrow "say .mark backward"
