--- a/install-ready/_gmod.cfg
+++ b/install-ready/_gmod.cfg
@@ -20,3 +20,5 @@ exec v92/gmod/sandbox.cfg
 exec v92/gmod/ttt.cfg
 exec v92/gmod/trainbuild.cfg
 exec v92/gmod/dynrp.cfg
+
+exec v92/gmod/autoloadmap.cfg
