--- a/install-ready/v92/gmod/common.cfg
+++ b/install-ready/v92/gmod/common.cfg
@@ -10,6 +10,7 @@
 name "Reverend V92"
 skill 1 // Skill level; 1 = easy, 2 = medium, 3 = hard
 
+developer 0
 cl_steamoverlay_pos 1
 
 ////////////////////////////////////////
@@ -19,15 +20,6 @@ cl_steamoverlay_pos 1
 con_enable 1 // Enable the Console
 con_timestamp 1 // Prefix Timestamps to Console Entries
 con_notifytime 4 // Notification Time when Developer Mode is Enabled
-
-////////////////////////////////////////
-// CrouchJump combo
-////////////////////////////////////////
-
-alias +jumpcrouch "+jump; duckON"
-alias -jumpcrouch "duckOFF; -jump"
-alias duckON "+duck"
-alias duckOFF "-duck" 
 
 ////////////////////////////////////////
 // HUD Settings
@@ -264,6 +256,12 @@ texture_budget_background_alpha 128 // how translucent the budget panel is
 // GMod
 ////////////////////////////////////////
 
+gm_snapangles "45"
+gm_snapgrid "0"
+physgun_rotation_sensitivity "0.05"
+physgun_wheelspeed "10"
+
+cl_playermodel "V92C_Steampunk_Outlaw_M1"
 cl_defaultweapon weapon_physgun
 gamemode sandbox
 gmod_language en
