--- a/install-ready/v92/gmod/keyboard.cfg
+++ b/install-ready/v92/gmod/keyboard.cfg
@@ -41,8 +41,7 @@ bind w +forward // Move Forward
 bind s +back // Move Back
 bind a +moveleft // Strafe Left
 bind d +moveright // Strafe Right
-// bind space +jump // Jump
-bind space "+jump" // Jump-Crouch Combo
+bind space +jump // Jump
 bind ctrl +duck // Duck
 // bind ctrl toggle_duck // Toggle Duck
 bind alt +walk // Walk Slowly
