Removed gamepad from GMod, as it is purposely designed to break the game when enabled. Thanks Garry!

--- a/install-ready/v92/gmod/common.cfg
+++ b/install-ready/v92/gmod/common.cfg
@@ -30,7 +30,6 @@ crosshair 1 // Enable the Crosshair
 cl_drawhud 1 // Enable the HUD
 hud_fastswitch 0 // Fast Switch Setting: 0=Off, 1=Fast, 2=Controller Mode
 hud_quickinfo 1
-// hud_showemptyweaponslots 0 // Shows slots for missing weapons when recieving weapons out of order
 
 ////////////////////////////////////////
 // Noclip
@@ -61,7 +60,6 @@ sk_auto_reload_time 99999999999999999 // How Long to Wait Until Non-Active Weapo
 ////////////////////////////////////////
 
 fov 90
-// fov_desired 90
 
 mat_monitorgamma_tv_enabled 0
 mat_color_projection 0
@@ -79,7 +77,7 @@ mat_queue_mode 2 // The queue/thread mode the material system should use: -1=def
 mat_queue_report 0 // Report thread stalls.  Positive number will filter by stalls >= time in ms.  -1 reports all locks.
 mat_texture_list_content_path "" // The content path to the materialsrc directory. If left unset, it'll assume your content directory is next to the currently running game dir.
 mat_disable_d3d9ex 0 // Disables Windows Aero DirectX extensions (may positively or negatively affect performance depending on video drivers)
-mat_hdr_level 2 // HDR; 0=LDR only, 1=bloom only, 2=HDR
+mat_hdr_level 0 // HDR; 0=LDR only, 1=bloom only, 2=HDR
 r_waterforceexpensive 1 // Force expensive water
 r_rootlod 0 // Root LOD to start at
 // r_eyegloss 1 // Toggles glossy FX on eyes
@@ -172,26 +170,6 @@ m_mouseaccel2 0
 m_rawinput 1
 
 ////////////////////////////////////////
-// Deprecated Features
-////////////////////////////////////////
-
-c_maxpitch 0
-c_minpitch 0
-c_maxyaw 0
-c_minyaw 0
-c_maxdistance 0
-c_mindistance 0
-c_orthowidth 0
-c_orthoheight 0
-
-tv_nochat 0 // Don't receive chat messages from other SourceTV spectators
-cl_observercrosshair 0 // Toggle spectator crosshair in Half-Life TV
-bugreporter_uploadasync 0 // Upload attachments asynchronously
-
-// video_quicktime_encode_gamma 3 // QuickTime Video Encode Gamma Target- 0=no gamma adjust  1=platform default gamma  2 = gamma 1.8  3 = gamma 2.2  4 = gamma 2.5
-// video_quicktime_decode_gamma 0 // QuickTime Video Playback Gamma Target- 0=no gamma adjust  1=platform default gamma  2 = gamma 1.8  3 = gamma 2.2  4 = gamma 2.5
-
-////////////////////////////////////////
 // VProf Stuff
 ////////////////////////////////////////
 
@@ -253,19 +231,28 @@ texture_budget_panel_bottom_of_history_fraction 0.25 // number between 0 and 1
 texture_budget_background_alpha 128 // how translucent the budget panel is
 
 ////////////////////////////////////////
+// Communication
+////////////////////////////////////////
+
+sv_voiceenable 1
+voice_enable 1
+voice_modenable 1 // Enable/disable voice in this mod
+voice_scale 1
+voice_forcemicrecord 1
+
+////////////////////////////////////////
 // GMod
 ////////////////////////////////////////
 
-gm_snapangles "45"
-gm_snapgrid "0"
-physgun_rotation_sensitivity "0.05"
-physgun_wheelspeed "10"
+// gm_snapangles "45"
+// gm_snapgrid "0"
+// physgun_rotation_sensitivity "0.05"
+// physgun_wheelspeed "10"
 
-cl_playermodel "V92C_Steampunk_Outlaw_M1"
-cl_defaultweapon weapon_physgun
+// cl_playermodel "V92C_Steampunk_Outlaw_M1"
+// cl_defaultweapon weapon_crowbar
 gamemode sandbox
 gmod_language en
-cl_showhints 0
 
 gmod_mcore_test 1
 r_queued_ropes 1
@@ -274,7 +261,7 @@ cl_threaded_client_leaf_system 1
 mat_queue_mode -1
 r_threaded_renderables 1
 r_threaded_particles 1
-m9kgaseffect 0
+// m9kgaseffect 0
 
 playx_enabled 1
 playx_fps 30
