--- a/install-ready/v92/gmod/keyboard.cfg
+++ b/install-ready/v92/gmod/keyboard.cfg
@@ -51,6 +51,7 @@ bind shift +speed // Sprint
 // Inputs
 ////////////////////////////////////////
 
+bind g "impulse 201" // Spray Logo (Multiplayer)
 bind e +use // Use
 // bind z +zoom // Suit Zoom
 bind z toggle_zoom // Toggle Suit Zoom
@@ -65,6 +66,15 @@ bind mouse2 +attack2 // Alt-Fire
 bind r +reload // Reload
 
 ////////////////////////////////////////
+// Communication
+////////////////////////////////////////
+
+bind tab +showscores // Scoreboard (Multiplayer)
+bind x +voicerecord // VOIP (Multiplayer)
+bind home messagemode // Chat (Multiplayer)
+bind end messagemode2 // Team Chat (Multiplayer)
+
+////////////////////////////////////////
 // GMod
 ////////////////////////////////////////
 
@@ -76,12 +86,12 @@ bind f1 gm_showhelp
 bind f2 gm_showteam
 bind f3 gm_showspare1
 bind f4 gm_showspare2
-bind f12 addon_manager
 
 ////////////////////////////////////////
 // Add-Ons
 ////////////////////////////////////////
 
+bind f12 addon_manager
 bind j +gb-radial
 bind / drop
 bind k +tfa_vox_callout_radial
