--- a/install-ready/v92/gmod/sandbox.cfg
+++ b/install-ready/v92/gmod/sandbox.cfg
@@ -44,7 +44,7 @@ sv_kickerrornum 0
 
 // Physgun
 physgun_limited 1
-gm_snapangles 45
-gm_snapgrid 0
-physgun_rotation_sensitivity 0.05
-physgun_wheelspeed 10
+// gm_snapangles 45
+// gm_snapgrid 0
+// physgun_rotation_sensitivity 0.05
+// physgun_wheelspeed 10
