--- a/install-ready/v92/gmod/multiplayer.cfg
+++ b/install-ready/v92/gmod/multiplayer.cfg
@@ -1,30 +1,17 @@
 
 ////////////////////////////////////////
-// V92 Multiplayer Constants
-// v92_config_multiplayer_constants.cfg
+// V92 GMod Multiplayer Constants
+// multiplayer.cfg
 ////////////////////////////////////////
-
-////////////////////////////////////////
-// Third Person Settings
-////////////////////////////////////////
-
-cam_collision 1 // When in thirdperson and cam_collision is set to 1, an attempt is made to keep the camera from passing though walls.
-cam_ideallag 4.0 // Amount of lag used when matching offset to ideal angles in thirdperson view
-cam_idealdelta 4.0 // Controls the speed when matching offset to ideal angles in thirdperson view
-cam_idealpitch 0
-cam_idealyaw 0
-cam_idealdist 150
-cam_idealdistright 0
-cam_idealdistup 0
-cam_snapto 0
 
 ////////////////////////////////////////
 // Server Settings
 ////////////////////////////////////////
 
-hostname "Leeroy's Taxidermy & Brothel: You Fuck'em, we stuff'em, how may I stuff you today?" // Server Name (Multiplayer)
-maxplayers 2 // Max Players (Multiplayer)
-rcon_password scalpel // Set RCon Password
+// hostname "Leeroy's Taxidermy & Brothel: You Fuck'em, we stuff'em, how may I stuff you today?" // Server Name (Multiplayer)
+hostname "V92's Rampant AI Core" // Server Name (Multiplayer)
+maxplayers 92 // Max Players (Multiplayer)
+rcon_password "fuckyou4201969" // Set RCon Password
 // password // Echos the current server access password
 sv_password nioj // Server password for entry into multiplayer games
 
@@ -54,9 +41,9 @@ mp_friendlyfire 1 // Enable Friendly Fire (Multiplayer)
 ////////////////////////////////////////
 
 cl_clanid 25804749 // Steam Group ID
-cl_logofile "materials/vgui/logos/inkling_dance.vmt" // Spray to use
+// cl_logofile "materials/vgui/logos/inkling_dance.vmt" // Spray to use
 cl_customsounds 1 // Enable player jingles
-cl_soundfile "sound/player/jingle.wav" // Player jingle to use
+cl_soundfile "sound/jessev92/memes/you_won.wav" // Player jingle to use
 
 hud_takesshots 0 // Auto-save a scoreboard screenshot at the end of a map.
 hud_freezecamhide 1 // Hide the HUD during freeze-cam
@@ -70,36 +57,15 @@ cl_chatfilters 63
 cl_showpluginmessages 1 // Allow plugins to display messages to you
 
 ////////////////////////////////////////
-// Inputs
-////////////////////////////////////////
-
-bind g "impulse 201" // Spray Logo (Multiplayer)
-
-////////////////////////////////////////
-// Communication
-////////////////////////////////////////
-
-sv_voiceenable 1
-voice_enable 1
-voice_modenable 1 // Enable/disable voice in this mod
-voice_scale 1
-voice_forcemicrecord 1
-
-bind tab +showscores // Scoreboard (Multiplayer)
-bind x +voicerecord // VOIP (Multiplayer)
-bind home messagemode // Chat (Multiplayer)
-bind end messagemode2 // Team Chat (Multiplayer)
-
-////////////////////////////////////////
 // Logging
 ////////////////////////////////////////
 
 sv_logsdir server_logs // Folder in the game directory where server logs will be stored
-sv_logfile 1 // Log server information in the log file
+sv_logfile 0 // Log server information in the log file
 sv_logflush 0 // Flush the log file to disk on each write (slow)
 sv_logecho 0 // Echo log information to the console
-sv_log_onefile 0 // Log server information to only one file
-sv_logbans 1 // Log server bans in the server logs
+sv_log_onefile 1 // Log server information to only one file
+sv_logbans 0 // Log server bans in the server logs
 
 ////////////////////////////////////////
 // Network Settings
@@ -122,7 +88,6 @@ sv_maxupdaterate 92 // Maximum updates per second that the server will allow (ti
 cl_playerspraydisable 0 // Disable player sprays.
 cl_allowupload 1 // Client uploads customization files
 cl_allowdownload 1 // Client downloads customization files
-// cl_disablehtmlmotd 1 // Disable HTML MotDs
 sv_allowcslua 1 // Allow Client-Side Lua
 
 ////////////////////////////////////////
