--- a/install-ready/_gmod.cfg
+++ b/install-ready/_gmod.cfg
@@ -3,19 +3,19 @@
 // GMod
 
 // Constants
-// exec v92/common/common.cfg
-// exec v92/common/keyboard.cfg
-// exec v92/common/gamepad.cfg
+exec v92/common/common.cfg
+exec v92/common/keyboard.cfg
+// exec v92/common/gamepad.cfg // Not supported in GMod - don't enable
 // exec v92/common/skill.cfg
-// exec v92/common/multiplayer.cfg
+exec v92/common/multiplayer.cfg
 
 // GMod
-exec v92/gmod/common.cfg
-exec v92/gmod/keyboard.cfg
+// exec v92/gmod/common.cfg
+// exec v92/gmod/keyboard.cfg
 exec v92/gmod/multiplayer.cfg
 
 // Gamemodes
 exec v92/gmod/sandbox.cfg
-exec v92/gmod/ttt.cfg
-exec v92/gmod/trainbuild.cfg
-exec v92/gmod/dynrp.cfg
+// exec v92/gmod/ttt.cfg
+// exec v92/gmod/trainbuild.cfg
+// exec v92/gmod/dynrp.cfg
