--- a/install-ready/v92/gmod/common.cfg
+++ b/install-ready/v92/gmod/common.cfg
@@ -8,7 +8,7 @@
 ////////////////////////////////////////
 
 name "Reverend V92"
-skill 1 // Skill level; 1 = easy, 2 = medium, 3 = hard
+// skill 1 // Skill level; 1 = easy, 2 = medium, 3 = hard
 
 developer 0
 cl_steamoverlay_pos 1
@@ -29,26 +29,26 @@ cl_showhelp 1 // Set to 0 to not show on-screen help
 crosshair 1 // Enable the Crosshair
 cl_drawhud 1 // Enable the HUD
 hud_fastswitch 0 // Fast Switch Setting: 0=Off, 1=Fast, 2=Controller Mode
-hud_quickinfo 1
+// hud_quickinfo 1
 
 ////////////////////////////////////////
 // Noclip
 ////////////////////////////////////////
 
-sv_noclipaccelerate 5
-sv_noclipspeed 10
+// sv_noclipaccelerate 5
+// sv_noclipspeed 10
 
-sv_specaccelerate 5
-sv_specspeed 3
-sv_specnoclip 1
+// sv_specaccelerate 5
+// sv_specspeed 3
+// sv_specnoclip 1
 
 ////////////////////////////////////////
 // Misc Settings
 ////////////////////////////////////////
 
-sv_stickysprint 0
-sv_stickysprint_default 0
-option_duck_method 1
+// sv_stickysprint 0
+// sv_stickysprint_default 0
+// option_duck_method 1
 
 sk_auto_reload_time 99999999999999999 // How Long to Wait Until Non-Active Weapons are Auto-Reloaded in Milliseconds
 
@@ -59,9 +59,10 @@ sk_auto_reload_time 99999999999999999 // How Long to Wait Until Non-Active Weapo
 // Graphics Settings
 ////////////////////////////////////////
 
-fov 90
+// fov 90
 
 mat_monitorgamma_tv_enabled 0
+mat_colorcorrection 0
 mat_color_projection 0
 mat_powersavingsmode 0 // Power Savings Mode
 mat_software_aa_strength 1 // Software AA - perform a software anti-aliasing post-process (an alternative/supplement to MSAA). This value sets the strength of the effect: (0.0 - off), (1.0 - full)
@@ -96,31 +97,31 @@ r_drawmodelstatsoverlaymax 1.5 // time in milliseconds beyond which a model over
 // Audio Settings
 ////////////////////////////////////////
 
-adsp_debug 0
-dsp_slow_cpu 0
-dsp_volume 1.0
-dsp_enhance_stereo 1
-snd_mute_losefocus 1 // Mute the game when focus is lost
+// adsp_debug 0
+// dsp_slow_cpu 0
+// dsp_volume 1.0
+// dsp_enhance_stereo 1
+// snd_mute_losefocus 1 // Mute the game when focus is lost
 
-volume 1.0
-snd_musicvolume 1.0
-snd_mixahead 0.25
-snd_ducktovolume 0.55
-snd_duckerattacktime 0.5
-snd_duckerreleasetime 2.5
-snd_duckerthreshold 0.15
-snd_pitchquality 1
-snd_legacy_surround 1 //
-windows_speaker_config 7 // 7 = 7.1 surround sound, 5 = 5.1 surround sound, 4=two speakers, 3 = 4 speakers, 1 = headset
-suitvolume 1 // Volume of the HEV suit
-commentary 0 // Toggle commentary
-commentary_firstrun 0 // Toggle commentary
-cl_hudhint_sound 1 // Disable hudhint sounds.
-closecaption 0 // Enable close captioning
-cc_linger_time 1.0 // Close caption linger time.
-cc_predisplay_time 0 // Close caption delay before showing caption.
+// volume 1.0
+// snd_musicvolume 1.0
+// snd_mixahead 0.25
+// snd_ducktovolume 0.55
+// snd_duckerattacktime 0.5
+// snd_duckerreleasetime 2.5
+// snd_duckerthreshold 0.15
+// snd_pitchquality 1
+// snd_legacy_surround 1 //
+// windows_speaker_config 5 // 7 = 7.1 surround sound, 5 = 5.1 surround sound, 4=two speakers, 3 = 4 speakers, 1 = headset
+// suitvolume 0.25 // Volume of the HEV suit
+// commentary 0 // Toggle commentary
+// commentary_firstrun 0 // Toggle commentary
+// cl_hudhint_sound 1 // Disable hudhint sounds.
+// closecaption 0 // Enable close captioning
+// cc_linger_time 1.0 // Close caption linger time.
+// cc_predisplay_time 0 // Close caption delay before showing caption.
 cc_lang english // 2-character ISO code for language to use; blank uses default
-cc_subtitles = 1 // If set, don't show sound effect captions, just voice overs (i.e., won't help hearing impaired players).
+// cc_subtitles = 1 // If set, don't show sound effect captions, just voice overs (i.e., won't help hearing impaired players).
 
 ////////////////////////////////////////
 // Performance
@@ -149,93 +150,93 @@ vgui_message_dialog_modal 1
 // Mouse Settings
 ////////////////////////////////////////
 
-lookspring 0 // toggles automatic view centering when 'mlook' is deactivated - * 1 is 'on', 0 is 'off'
-lookstrafe 0 // toggles mouse strafing when 'mlook' is active - * 1 is 'on', 0 is 'off'
-cl_software_cursor 0 // Switches the game to use a larger software cursor instead of the normal OS cursor
-cl_mouselook 1
-cl_idealpitchscale 0.8
-m_pitch 0.022
-m_filter 1
-sensitivity 3
-m_side 0.8
-m_yaw 0.022
-m_forward 1
-m_customaccel 3
-m_customaccel_scale 0.04
-m_customaccel_max 0
-m_customaccel_exponent 1
-m_mousespeed 1
-m_mouseaccel1 0
-m_mouseaccel2 0
-m_rawinput 1
+// lookspring 0 // toggles automatic view centering when 'mlook' is deactivated - * 1 is 'on', 0 is 'off'
+// lookstrafe 0 // toggles mouse strafing when 'mlook' is active - * 1 is 'on', 0 is 'off'
+// cl_software_cursor 0 // Switches the game to use a larger software cursor instead of the normal OS cursor
+// cl_mouselook 1
+// cl_idealpitchscale 0.8
+// m_pitch 0.022
+// m_filter 1
+// sensitivity 3
+// m_side 0.8
+// m_yaw 0.022
+// m_forward 1
+// m_customaccel 3
+// m_customaccel_scale 0.04
+// m_customaccel_max 0
+// m_customaccel_exponent 1
+// m_mousespeed 1
+// m_mouseaccel1 0
+// m_mouseaccel2 0
+// m_rawinput 1
 
 ////////////////////////////////////////
 // VProf Stuff
 ////////////////////////////////////////
 
 // vprof_on
-vprof_off
-vprof_graph 0 
-vprof_verbose 1 // Set to one to show average and peak times
+// vprof_off
+// vprof_graph 0 
+// vprof_verbose 1 // Set to one to show average and peak times
 // vprof_cachemiss_on
-vprof_cachemiss_off
-vprof_warningmsec 10 // Above this many milliseconds render the label red to indicate slow code.
-vprof_unaccounted_limit 0.3 // number of milliseconds that a node must exceed to turn red in the vprof panel
-vprof_graphheight 256 
-vprof_graphwidth 512
+// vprof_cachemiss_off
+// vprof_warningmsec 10 // Above this many milliseconds render the label red to indicate slow code.
+// vprof_unaccounted_limit 0.3 // number of milliseconds that a node must exceed to turn red in the vprof panel
+// vprof_graphheight 256 
+// vprof_graphwidth 512
 
 ////////////////////////////////////////
 // Net Graph Panel
 ////////////////////////////////////////
 
-net_scale 5
-net_graphpos 1
-net_graphsolid 1
-net_graphtext 1 // Draw text fields
-net_graphmsecs 400 // The latency graph represents this many milliseconds.
-net_graphshowlatency 1 // Draw the ping/packet loss graph.
-net_graphshowinterp 1 // Draw the interpolation graph.
-net_graph 0 // Draw the network usage graph, = 2 draws data on payload, = 3 draws payload legend.
-net_graphheight 64 // Height of netgraph panel
-net_graphproportionalfont 1 // Determines whether netgraph font is proportional or not
+// net_scale 5
+// net_graphpos 1
+// net_graphsolid 1
+// net_graphtext 1 // Draw text fields
+// net_graphmsecs 400 // The latency graph represents this many milliseconds.
+// net_graphshowlatency 1 // Draw the ping/packet loss graph.
+// net_graphshowinterp 1 // Draw the interpolation graph.
+// net_graph 0 // Draw the network usage graph, = 2 draws data on payload, = 3 draws payload legend.
+// net_graphheight 64 // Height of netgraph panel
+// net_graphproportionalfont 1 // Determines whether netgraph font is proportional or not
 
 ////////////////////////////////////////
 // Budget Panel
 ////////////////////////////////////////
 
-budget_bargraph_background_alpha 128 // how translucent the budget panel is
-budget_peaks_window 30 // number of frames to look at when figuring out peak frametimes
-budget_averages_window 30 // number of frames to look at when figuring out average frametimes
-budget_show_peaks 1 // enable/disable peaks in the budget panel
-budget_show_averages 0 // enable/disable averages in the budget panel
-budget_show_history 1 // turn history graph off and on. . good to turn off on low end
-budget_history_numsamplesvisible 100 // number of samples to draw in the budget history window.  The lower the better as far as rendering overhead of the budget panel
-budget_history_range_ms 66 // budget history range in milliseconds
-budget_panel_bottom_of_history_fraction 0.25 // number between 0 and 1
-budget_bargraph_range_ms 16 // budget bargraph range in milliseconds
-budget_background_alpha 128 // how translucent the budget panel is
-budget_panel_x 0 // number of pixels from the left side of the game screen to draw the budget panel
-budget_panel_y 50 // number of pixels from the top side of the game screen to draw the budget panel
-budget_panel_width 512 // width in pixels of the budget panel
-budget_panel_height 384 // height in pixels of the budget panel
+// budget_bargraph_background_alpha 128 // how translucent the budget panel is
+// budget_peaks_window 30 // number of frames to look at when figuring out peak frametimes
+// budget_averages_window 30 // number of frames to look at when figuring out average frametimes
+// budget_show_peaks 1 // enable/disable peaks in the budget panel
+// budget_show_averages 0 // enable/disable averages in the budget panel
+// budget_show_history 1 // turn history graph off and on. . good to turn off on low end
+// budget_history_numsamplesvisible 100 // number of samples to draw in the budget history window.  The lower the better as far as rendering overhead of the budget panel
+// budget_history_range_ms 66 // budget history range in milliseconds
+// budget_panel_bottom_of_history_fraction 0.25 // number between 0 and 1
+// budget_bargraph_range_ms 16 // budget bargraph range in milliseconds
+// budget_background_alpha 128 // how translucent the budget panel is
+// budget_panel_x 0 // number of pixels from the left side of the game screen to draw the budget panel
+// budget_panel_y 50 // number of pixels from the top side of the game screen to draw the budget panel
+// budget_panel_width 512 // width in pixels of the budget panel
+// budget_panel_height 384 // height in pixels of the budget panel
 
 ////////////////////////////////////////
 // Texture Budget Panel
 ////////////////////////////////////////
 
-texture_budget_panel_x 0 // number of pixels from the left side of the game screen to draw the budget panel
-texture_budget_panel_y 450 // number of pixels from the top side of the game screen to draw the budget panel
-texture_budget_panel_width 512 // width in pixels of the budget panel
-texture_budget_panel_height 284 // height in pixels of the budget panel
-texture_budget_panel_bottom_of_history_fraction 0.25 // number between 0 and 1
-texture_budget_background_alpha 128 // how translucent the budget panel is
+// texture_budget_panel_x 0 // number of pixels from the left side of the game screen to draw the budget panel
+// texture_budget_panel_y 450 // number of pixels from the top side of the game screen to draw the budget panel
+// texture_budget_panel_width 512 // width in pixels of the budget panel
+// texture_budget_panel_height 284 // height in pixels of the budget panel
+// texture_budget_panel_bottom_of_history_fraction 0.25 // number between 0 and 1
+// texture_budget_background_alpha 128 // how translucent the budget panel is
 
 ////////////////////////////////////////
 // Communication
 ////////////////////////////////////////
 
-sv_voiceenable 1
-voice_enable 1
+sv_voiceenable 0
+voice_enable 0
 voice_modenable 1 // Enable/disable voice in this mod
 voice_scale 1
 voice_forcemicrecord 1
@@ -254,17 +255,18 @@ voice_forcemicrecord 1
 gamemode sandbox
 gmod_language en
 
+// mat_queue_mode -1
+mat_queue_mode 2
 gmod_mcore_test 1
 r_queued_ropes 1
 cl_threaded_bone_setup 1
 cl_threaded_client_leaf_system 1
-mat_queue_mode -1
 r_threaded_renderables 1
 r_threaded_particles 1
 // m9kgaseffect 0
 
-playx_enabled 1
-playx_fps 30
-playx_volume 100
-playx_video_range_hints_enabled 0
-playx_video_range_enabled 0
+// playx_enabled 1
+// playx_fps 30
+// playx_volume 100
+// playx_video_range_hints_enabled 0
+// playx_video_range_enabled 0
