--- a/install-ready/v92/gmod/keyboard.cfg
+++ b/install-ready/v92/gmod/keyboard.cfg
@@ -4,7 +4,7 @@
 // v92_config_keyboard_constants.cfg
 ////////////////////////////////////////
 
-unbindall // Reset Keys
+// unbindall // Reset Keys
 
 ////////////////////////////////////////
 // Control Keys
