--- a/install-ready/v92/gmod/multiplayer.cfg
+++ b/install-ready/v92/gmod/multiplayer.cfg
@@ -9,9 +9,9 @@
 ////////////////////////////////////////
 
 // hostname "Leeroy's Taxidermy & Brothel: You Fuck'em, we stuff'em, how may I stuff you today?" // Server Name (Multiplayer)
-hostname "V92's Rampant AI Core" // Server Name (Multiplayer)
+hostname "Cult of V92" // Server Name (Multiplayer)
 maxplayers 92 // Max Players (Multiplayer)
-rcon_password "fuckyou4201969" // Set RCon Password
+rcon_password "window" // Set RCon Password
 // password // Echos the current server access password
 sv_password nioj // Server password for entry into multiplayer games
 
@@ -52,20 +52,20 @@ hud_freezecamhide 1 // Hide the HUD during freeze-cam
 // Chat Settings
 ////////////////////////////////////////
 
-cl_chatfilter_version 1
-cl_chatfilters 63
-cl_showpluginmessages 1 // Allow plugins to display messages to you
+// cl_chatfilter_version 1
+// cl_chatfilters 63
+// cl_showpluginmessages 1 // Allow plugins to display messages to you
 
 ////////////////////////////////////////
 // Logging
 ////////////////////////////////////////
 
-sv_logsdir server_logs // Folder in the game directory where server logs will be stored
-sv_logfile 0 // Log server information in the log file
-sv_logflush 0 // Flush the log file to disk on each write (slow)
-sv_logecho 0 // Echo log information to the console
-sv_log_onefile 1 // Log server information to only one file
-sv_logbans 0 // Log server bans in the server logs
+// sv_logsdir server_logs // Folder in the game directory where server logs will be stored
+// sv_logfile 0 // Log server information in the log file
+// sv_logflush 0 // Flush the log file to disk on each write (slow)
+// sv_logecho 0 // Echo log information to the console
+// sv_log_onefile 1 // Log server information to only one file
+// sv_logbans 0 // Log server bans in the server logs
 
 ////////////////////////////////////////
 // Network Settings
@@ -73,7 +73,7 @@ sv_logbans 0 // Log server bans in the server logs
 
 net_maxroutable 1260 // Requested max packet size before packets are 'split' min. 576 max. 1260
 // rate 30000 // Max bytes/sec the host can receive data
-net_maxfilesize 8 // Max Size in MB for files to download (Max 64)
+net_maxfilesize 4 // Max Size in MB for files to download (Max 64)
 net_queued_packet_thread 1 // Use a high priority thread to send queued packets out instead of sending them each frame.
 net_splitrate 1024 // Number of fragments for a splitpacket that can be sent per frame
 net_splitpacket_maxrate 1048576 // Max bytes per second when queueing splitpacket chunks min. 1000 max. 1048576
@@ -85,9 +85,9 @@ sv_maxupdaterate 92 // Maximum updates per second that the server will allow (ti
 // Security
 ////////////////////////////////////////
 
-cl_playerspraydisable 0 // Disable player sprays.
-cl_allowupload 1 // Client uploads customization files
-cl_allowdownload 1 // Client downloads customization files
+cl_playerspraydisable 1 // Disable player sprays.
+cl_allowupload 0 // Client uploads customization files
+cl_allowdownload 0 // Client downloads customization files
 sv_allowcslua 1 // Allow Client-Side Lua
 
 ////////////////////////////////////////
